added style tags
for css

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ Ut consequat consectetur nisl, at viverra turpis. Sed mollis ultricies sem, dict
 
 
 
-
+<style>
 html,
 body {
   font-family: "Verdana", sans-serif;
@@ -461,3 +461,4 @@ body {
   color: #B0BDD5;
   font-size: 12px;
 }
+</style>
