--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@ body {
   width: 75%;
   color: black;
   font-family: "Andale Mono", monospace;
-  font-size: .95em;
+  font-size: max(.95em, 12px);
+  font-weight: bold;
   display: inline-grid;
   grid-template-columns: 6% 35% 19% 25% 22%;
   grid-template-rows: 1fr;
@@ -251,13 +252,13 @@ body {
   text-align: center;
   font-family: 'Andale Mono', monospace;
   margin-top: 50px;
-  font-size: 1em;
+  font-size: max(1em, 11px);
 }
 
 #about-label-2 {
   text-align: center;
   font-family: 'Andale Mono', monospace;
-  font-size: 1.35em;
+  font-size: max(1.35em, 15px);
   
 }
 
@@ -266,7 +267,7 @@ body {
   margin-left: 15%;
   margin-right: 15%;
  font-family: 'Verdana', sans-serif;
-  font-size: 1.1em;
+  font-size: max(1.1em, 12px);
   line-height: 1.7em;
 }
 
@@ -290,7 +291,7 @@ body {
   margin-bottom: 35px;
   text-align: center;
   font-family: 'Andale Mono', monospace;
-  font-size: 1.35em;
+  font-size: max(1.35em, 15px);
 }
 
 #playimg {
@@ -393,13 +394,13 @@ body {
 #research{
   text-align: center;
   font-family: 'Andale Mono', monospace;
-  font-size: 1.25em;
+  font-size: max(1.25em, 14px);
 }
 
 #research-text{
   text-align: left;
   font-family: 'Verdana', sans-serif;
-  font-size: .78em;
+  font-size: max(.78em, 11px);
   line-height: 1.5em;
 }
 
@@ -430,13 +431,13 @@ body {
 #show{
   text-align: center;
   font-family: 'Andale Mono', monospace;
-  font-size: 1.25em;
+  font-size: max(1.25em, 14px);
 }
 
 #show-text{
   text-align: left;
   font-family: 'Verdana', sans-serif;
-  font-size: .78em;
+  font-size: max(.78em, 11px);
   line-height: 1.5em;
 }
 
@@ -478,7 +479,7 @@ body {
 #contact-label {
   text-align: center;
   font-family: 'Andale Mono', monospace;
-  font-size: 1.05em;
+  font-size: max(1.05em, 14px);
 }
 
 #contactme {
@@ -487,7 +488,7 @@ body {
   width: 75%;
   color: black;
   font-family: "Andale Mono", monospace;
-  font-size: .95em;
+  font-size: max(.95em, 11px);
   display: inline-grid;
   grid-template-columns: 20% 60% 15%;
   grid-template-rows: 1fr;
