--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
    <br>
    
    <div id="headimg">
-     <img src="https://live.staticflickr.com/65535/50084439367_ed4645fa6e_o.png" width="75%" id="headimg1" alt="Image of Mandelbrot">
+     <img src="https://live.staticflickr.com/65535/50084439367_ed4645fa6e_o.png" width="70%" id="headimg1" alt="Image of Mandelbrot">
    </div>
    
    
@@ -157,7 +157,7 @@ body {
 }
 
 #name-block {
-  margin-top: 45px auto 5px;
+  margin-top: 50px auto 5px;
 }
 #name-text {
   font-family: "Andale Mono", monospace;
@@ -190,7 +190,7 @@ body {
   width: 75%;
   color: black;
   font-family: "Andale Mono", monospace;
-  font-size: max(.95em, 12px);
+  font-size: max(1em, 12px);
   font-weight: bold;
   display: inline-grid;
   grid-template-columns: 6% 35% 19% 25% 22%;
@@ -225,7 +225,7 @@ body {
 }
 
 #headimg {
-  margin-top: 50px;
+  margin-top: 57px;
   position: inline; 
   top: 0%;  
   width: 100%; 
@@ -446,7 +446,7 @@ body {
 }
 
 #float-line {
-  margin-top: 50px;
+  margin-top: 75px;
   margin-bottom: 35px;
   width: 100%;
   display: inline-flex;
