--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    
    <div id="nav">
      <div id="nav-about"><a id="nav-links" href="#about">ABOUT</a></div>
-     <div id="nav-play"><a id="nav-links" href="https://www.rca.ac.uk">INTERACT</a></div>
+     <div id="nav-play"><a id="nav-links" href="https://jscalz.github.io/dis-order-play/">INTERACT</a></div>
      <div id="nav research"><a id="nav-links" href="https://www.rca.ac.uk">RESEARCH</a></div>
      <div id="nav-show"><a id="nav-links" href="https://www.rca.ac.uk">SHOW</a></div>
      <div id="nav-contact"><a id="nav-links" href="#contact">CONTACT</a></div>
@@ -29,7 +29,7 @@
    <br>
    
    <div id="headimg">
-     <img src="https://live.staticflickr.com/65535/50084439367_ed4645fa6e_o.png" width="70%" id="headimg1" alt="Image of Mandelbrot">
+     <img src="https://live.staticflickr.com/65535/50084439367_ed4645fa6e_o.png" width="65%" id="headimg1" alt="Image of Mandelbrot">
    </div>
    
    
@@ -161,7 +161,7 @@ body {
 }
 #name-text {
   font-family: "Andale Mono", monospace;
-  font-size: 2.75em;
+  font-size: max(2.75em, 35px);
 }
 
 #home-link{
@@ -190,7 +190,7 @@ body {
   width: 75%;
   color: black;
   font-family: "Andale Mono", monospace;
-  font-size: max(1em, 12px);
+  font-size: max(1em, 12.5px);
   font-weight: bold;
   display: inline-grid;
   grid-template-columns: 6% 35% 19% 25% 22%;
@@ -244,7 +244,7 @@ body {
 
 #about{
   margin-top: 50px;
-  width: 75%;
+  width: 70%;
   display: inline;
 }
 
@@ -252,13 +252,13 @@ body {
   text-align: center;
   font-family: 'Andale Mono', monospace;
   margin-top: 50px;
-  font-size: max(1em, 11px);
+  font-size: max(1em, 12.5px);
 }
 
 #about-label-2 {
   text-align: center;
   font-family: 'Andale Mono', monospace;
-  font-size: max(1.35em, 15px);
+  font-size: max(1.35em, 15.5px);
   
 }
 
@@ -267,8 +267,8 @@ body {
   margin-left: 15%;
   margin-right: 15%;
  font-family: 'Verdana', sans-serif;
-  font-size: max(1.1em, 12px);
-  line-height: 1.7em;
+  font-size: max(1.1em, 12.25px);
+  line-height: 1.8em;
 }
 
 #line3 {
@@ -291,7 +291,7 @@ body {
   margin-bottom: 35px;
   text-align: center;
   font-family: 'Andale Mono', monospace;
-  font-size: max(1.35em, 15px);
+  font-size: max(1.35em, 15.5px);
 }
 
 #playimg {
@@ -446,7 +446,7 @@ body {
 }
 
 #float-line {
-  margin-top: 75px;
+  margin-top: 100px;
   margin-bottom: 35px;
   width: 100%;
   display: inline-flex;
