--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    <div id="nav">
      <div id="nav-about"><a id="nav-links" href="#about">ABOUT</a></div>
      <div id="nav-play"><a id="nav-links" href="https://jscalz.github.io/dis-order-interact/">INTERACT</a></div>
-     <div id="nav research"><a id="nav-links" href="https://www.rca.ac.uk">RESEARCH</a></div>
+     <div id="nav research"><a id="nav-links" href="https://jscalz.github.io/dis-order-research">RESEARCH</a></div>
      <div id="nav-show"><a id="nav-links" href="https://www.rca.ac.uk">SHOW</a></div>
      <div id="nav-contact"><a id="nav-links" href="#contact">CONTACT</a></div>
    </div>
