--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ The imagery displayed here is of the Mandelbrot equation, chosen as the projectâ
      <div id="playimg">
        
      <img src="https://live.staticflickr.com/65535/50083620813_317c5bd146_o.png" style="width:75%" alt="Image of Mandelbrot">
-      <a href="https://jscalz.github.io/dis-order-play" class="launch">LAUNCH</a>
+      <a href="https://jscalz.github.io/dis-order-interact" class="launch">LAUNCH</a>
    
   </div>
   </div>
