body margin 0, move mandelstrip

--- a/index.html
+++ b/index.html
@@ -108,9 +108,7 @@ The imagery displayed here is of the Mandelbrot equation, chosen as the projectâ
    </div>
    </div>
     
-  <div id="mandelstrip">
-     <img src="https://live.staticflickr.com/65535/50117283817_6c651f8a00_o.png" width="100%" id="headimg1" alt="Mandelbulbs">
-   </div>
+ 
    
   
     
@@ -144,7 +142,9 @@ The imagery displayed here is of the Mandelbrot equation, chosen as the projectâ
   <a id="top-link" href="#name-block">Back to top ^</a>
   </div> 
 
-
+ <div id="mandelstrip">
+     <img src="https://live.staticflickr.com/65535/50117283817_6c651f8a00_o.png" width="100%" id="headimg1" alt="Mandelbulbs">
+   </div>
 
 </body>
 </html>
@@ -159,6 +159,7 @@ body {
   text-align: center;
   background-color: white;
   color: black;
+ margin: 0;
 }
 
 #name-block {
