Add links to show and research block

--- a/index.html
+++ b/index.html
@@ -85,23 +85,23 @@ The imagery displayed here is of the Mandelbrot equation, chosen as the projectâ
   <div id="float">
     
     <div id="float-child">
-      <div id="fc-research-img">
-        <img src="https://live.staticflickr.com/65535/50079273911_286d440bc2_b.jpg" width="100%">
+      <div id="fc-research-img"><a id="nav-links" href="https://jscalz.github.io/dis-order-research"> 
+        <img src="https://live.staticflickr.com/65535/50079273911_286d440bc2_b.jpg" width="100%"></a>
       </div>
 
         <div id="float-child-research">
-      <div id="research"><h3>RESEARCH</h3></div>
+      <div id="research"><a id="nav-links" href="https://jscalz.github.io/dis-order-research"> <h3>RESEARCH</h3></a></div>
               <div id="research-text">More about OCD, the Mandelbrot equation and the making process. </div>
    
       </div>
     </div>
       
     <div id="float-child">
-      <div id="fc-show-img">
-        <img src="https://live.staticflickr.com/65535/50079273916_91db3493b5_b.jpg" width="92%">
+      <div id="fc-show-img"><a id="nav-links" href="https://jscalz.github.io/dis-order-show"> 
+       <img src="https://live.staticflickr.com/65535/50079273916_91db3493b5_b.jpg" width="92%"></a>
       </div>
       <div id="float-child-show">
-      <div id="show"><h3>SHOW</h3></div>
+      <div id="show"><a id="nav-links" href="https://jscalz.github.io/dis-order-show"> <h3>SHOW</h3></a></div>
       <div id="show-text"> Vision for the physical show: see the performance proposal. </div>
     </div>  
    </div>
