fixing border on research image

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ The imagery displayed here is of the Mandelbrot equation, chosen as the projectâ
     
     <div id="float-child">
       <div id="fc-research-img"><a id="nav-links" href="https://jscalz.github.io/dis-order-research"> 
-        <img src="https://live.staticflickr.com/65535/50079273911_286d440bc2_b.jpg" width="100%"></a>
+        <img src="https://live.staticflickr.com/65535/50079273911_286d440bc2_b.jpg" width="100%" border=0></a>
       </div>
 
         <div id="float-child-research">
@@ -382,11 +382,11 @@ body {
 }
 
 #fc-research-img{
-  width: 100%;
+  width: 102%;
   float: left;
   z-index: 5;
   display: inline-flex;
-   border-style: solid;
+  /* border-style: solid;*/
 }
 
 #float-child-research{
